--- a/WaterLabel/WaterLabel/Info.plist
+++ b/WaterLabel/WaterLabel/Info.plist
@@ -42,6 +42,8 @@
 	</dict>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>是否允许将网页截图存到你的相册中?</string>
+	<key>NSCameraUsageDescription</key>
+	<string>是否允许此App访问你的相机?</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
